feat: 统一Plan多智能体编排入口